infra/k8s/spring-msa/02-external-data-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: spring-msa
spec:
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: postgres-storage-vm
  namespace: spring-msa
  labels:
    kubernetes.io/service-name: postgres
addressType: IPv4
ports:
  - name: postgres
    protocol: TCP
    port: 5432
endpoints:
  - addresses:
      - 192.168.147.101
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: spring-msa
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: redis-storage-vm
  namespace: spring-msa
  labels:
    kubernetes.io/service-name: redis
addressType: IPv4
ports:
  - name: redis
    protocol: TCP
    port: 6379
endpoints:
  - addresses:
      - 192.168.147.101
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: spring-msa
spec:
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: kafka-storage-vm
  namespace: spring-msa
  labels:
    kubernetes.io/service-name: kafka
addressType: IPv4
ports:
  - name: kafka
    protocol: TCP
    port: 9092
endpoints:
  - addresses:
      - 192.168.147.101
    conditions:
      ready: true
