infra/k8s/spring-msa/03-03-postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: spring-msa
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
