infra/k8s/spring-msa/12-stock-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-member-stock-service
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-member-stock-service
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /actuator/prometheus
        prometheus.io/port: "8084"
      labels:
        app: spring-member-stock-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - worker-2
      containers:
        - name: spring-member-stock-service
          image: ghcr.io/hyunmyungchoi/spring-member-stock-service@sha256:8f7e13e911066078585a4fd4a5cec355405d1d2534bcf1d4d312676ab5c0ef6e
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8084
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 300m
              memory: 512Mi
            limits:
              cpu: "1"
              memory: 768Mi
---
apiVersion: v1
kind: Service
metadata:
  name: spring-member-stock-service
  namespace: spring-msa
spec:
  type: ClusterIP
  selector:
    app: spring-member-stock-service
  ports:
    - port: 8084
      targetPort: 8084
