infra/k8s/spring-msa/31-admin-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-admin-gateway
  namespace: spring-msa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-admin-gateway
  template:
    metadata:
      labels:
        app: spring-admin-gateway
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: spring-admin-gateway
          image: ghcr.io/hyunmyungchoi/spring-admin-gateway@sha256:de3bc4526bfa0cccc6575be30835fe0f3627726f6e722dc829f8e53370db1752
          imagePullPolicy: Always
          ports:
            - containerPort: 8090
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8090
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8090
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              cpu: 256m
              memory: 512Mi
            limits:
              cpu: 256m
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: spring-admin-gateway
  namespace: spring-msa
spec:
  type: ClusterIP
  selector:
    app: spring-admin-gateway
  ports:
    - port: 8090
      targetPort: 8090
